--- a/deploy/docker/supervisord.conf
+++ b/deploy/docker/supervisord.conf
@@ -7,6 +7,11 @@ autorestart=true
 priority=10
 
 [program:gunicorn]
-command=gunicorn --bind 0.0.0.0:$PORT --workers 4 --threads 2 --timeout 300 --graceful-timeout 60 --keep-alive 65 --log-level debug --worker-class uvicorn.workers.UvicornWorker --max-requests 1000 --max-requests-jitter 50 server:app
+command=gunicorn --bind 0.0.0.0:%(ENV_PORT)s --workers 4 --threads 2 --timeout 300 --graceful-timeout 60 --keep-alive 65 --log-level debug --worker-class uvicorn.workers.UvicornWorker --max-requests 1000 --max-requests-jitter 50 server:app
 autorestart=true
 priority=20
+; Add these lines to capture output:
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
